################################################################################
# 
# Copyright (c) 2018 南京航空航天大学 航空通信网络研究室
# 
# @author   姜阳 (j824544269@gmail.com)
# @date     2018-06
# @brief    
# @version  0.0.1
# 
# Last Modified:  2018-06-11
# Modified By:    姜阳 (j824544269@gmail.com)
# 
################################################################################

################################################################################
# Install
################################################################################
install(DIRECTORY .
        DESTINATION ${AN_INCLUDE_DIR}/aeronode
        FILES_MATCHING PATTERN "*.h")